--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@indranilokg/okta-mcp-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Okta MCP (Model Context Protocol) server for managing Okta applications, users, and groups",
   "main": "mcpServer.js",
   "bin": {
@@ -22,13 +22,16 @@
     "oidc",
     "applications",
     "users",
-    "groups"
+    "groups",
+    "keychain",
+    "security"
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "keytar": "^7.9.0"
   },
   "engines": {
     "node": ">=16.0.0"
