fix: resolve npx binary name issue, update to oktamcp command
- Change bin name from okta-mcp-server to oktamcp (fixes npx compatibility)
- Update help text and examples to use new oktamcp command
- Bump version to 1.1.3 with working npx execution
- Improve .gitignore organization and exclude .tgz files
- Package now works correctly with: npx oktamcp --help

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-# Node modules
+# Logs
+*.log
+
+# Dependency directories
 node_modules/
 
 # Environment variables
 .env*
 
-indranilokg-okta-mcp-server-1.1.0.tgz
+# Package testing files
+*.tgz
