--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@indranilokg/okta-mcp-server",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "description": "Okta MCP (Model Context Protocol) server for managing Okta applications, users, and groups",
   "main": "mcpServer.js",
   "bin": {
-    "okta-mcp-server": "./mcpServer.js"
+    "oktamcp": "./mcpServer.js"
   },
   "type": "module",
   "scripts": {
