--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@indranilokg/okta-mcp-server",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Okta MCP (Model Context Protocol) server for managing Okta applications, users, and groups",
   "main": "mcpServer.js",
   "bin": {
@@ -31,7 +31,8 @@
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "keytar": "^7.9.0"
+    "keytar": "^7.9.0",
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=16.0.0"
