docs: Add npm badges and publishConfig for better package visibility

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "url": "https://github.com/indranilokg/okta-mcp-server/issues"
   },
   "homepage": "https://github.com/indranilokg/okta-mcp-server#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "files": [
     "mcpServer.js",
     "lib/",
